# cppCNN_vibecoding

./: .gitignore  AGENTS.md  README.md
.claude/: settings.json
.claude/hooks/: project_boundary_guard.ps1
.claude/rules/: project-boundary.md
.github/workflows/: claude-python.yml  windows-cmake.yml
claude/: .gitignore  README.md  requirements.txt
claude/configs/: model_config.json  training_config.json
claude/data/: README.md
claude/models/: README.md
claude/scripts/: evaluate.py  model.py  predict.py  prepare_data.py  preprocess.py  train.py  utils.py
claude/tests/: test_model.py  test_preprocess.py  test_utils.py
codex/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
codex/Release/: README.md  VERSION.txt  debug_gui.bat  run_cli_demo.bat  run_demo.bat  test_gui.bat
codex/Release/ai_records/: codex_session_export.html
codex/Release/demo_images/: README.md
codex/Release/models/: README.md
codex/assets/: labels.txt
codex/datasets/: .gitignore  README.md
codex/docs/: dataset_guide.md  design_notes.md  developer_training.md  gtsrb43_audit_and_plan.md  model_report.md  phase_b_baseline_results.md  phase_c_results.md  project_report.md  release_guide.md  release_notes_v1.0.0.md  release_notes_v1.0.1.md  release_notes_v1.1.0.md  release_notes_v2.0.0.md  release_notes_v2.0.0_gpu.md  release_notes_v2.1.0.md
codex/docs/teacher_submission/: README.md  ai_records.md  application_usage.md  build_and_development.md  model_versions.md  technical_details.md
codex/include/: README.md
codex/models/: .gitignore  README.md  gtsrb_43class_enhanced.labels.txt  gtsrb_semantic10.labels.txt  gtsrb_semantic10_model_card.md  gtsrb_subset10.labels.txt
codex/qml/: Main.qml
codex/qml/components/: AppButton.qml  InfoChip.qml  Panel.qml  ProbabilityBar.qml  StatusPill.qml
codex/report_kit/: 00_从这里开始.md  01_宝宝级资料包指南.md  01_宝宝级运行指南.md  02_代码阅读指南.md  03_报告撰写指南.md  04_答辩与演示指南.md  README.md
codex/scripts/: create_subset.cpp  package_release.ps1  package_report_kit.ps1  package_teacher_submission.ps1  package_user_release.ps1  train_model.ps1
codex/src/: main.cpp  main_libtorch.cpp
codex/src/app/: App.cpp  App.h
codex/src/cnn/: Activation.cpp  Activation.h  Augmenter.cpp  Augmenter.h  CNN.cpp  CNN.h  ConvLayer.cpp  ConvLayer.h  DropoutLayer.cpp  DropoutLayer.h  FCLayer.cpp  FCLayer.h  FlattenLayer.cpp  FlattenLayer.h  LRScheduler.cpp  LRScheduler.h  Layer.h  Loss.cpp  Loss.h  PoolingLayer.cpp  PoolingLayer.h  Tensor.cpp  Tensor.h  Trainer.cpp  Trainer.h
codex/src/cnn_libtorch/: GTSRBDataset.cpp  GTSRBDataset.h  LibTorchModel.cpp  LibTorchModel.h  LibTorchTrainer.cpp  LibTorchTrainer.h
codex/src/data/: DataLoader.cpp  DataLoader.h
codex/src/gui/: AppController.cpp  AppController.h  GuiMain.cpp  ImageBridge.cpp  ImageBridge.h  InferenceEngine.cpp  InferenceEngine.h  PredictionResult.h  ResourceLocator.cpp  ResourceLocator.h
codex/src/image/: ImageProcessor.cpp  ImageProcessor.h
codex/src/ui/: SimpleUI.cpp  SimpleUI.h
codex/tests/: test_basic.cpp  test_gui_controller.cpp
codex/tools/: generate_demo_dataset.cpp
docs/exports/: CODER - CPP代码讲解汇报.html  codex_session_export.html
docs/exports/CODER - CPP代码讲解汇报_files/: frame.html  saved_resource(1).html  saved_resource(2).html  saved_resource.html
docs/presentation/slidev/: .gitignore  .markdownlint.json  README.md  package-lock.json  package.json  slides.md
